--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/sitemap": "^0.1.0",
     "@astrojs/solid-js": "^0.1.2",
     "astro": "^1.0.0-beta.36",
+    "sass": "^1.52.1",
     "solid-js": "^1.4.3"
   }
 }
