update the project

--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -38,7 +38,7 @@
       "minHeight": 200,
       "fullScreen": false,
       "alwaysOnTop": false,
-      "icon": "/resources/favicon.ico",
+      "icon": "/resources/favicon.png",
       "enableInspector": true,
       "borderless": false,
       "maximize": false,
